--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
         <img src="https://github.com/evaingver/images/blob/main/Unbenanntes_Projekt-2.jpeg?raw=true" alt="Image 3"
             class="image">
     </div>
-</body>
+    <p>
+    LIVING SCULPTURES WEBRING <br>
+    <a href="https://double-empathy.neocities.org">NEXT PAGE</a> - 
+    <a href="https://sculptures.live">LANDING PAGE</a> - 
+    <a href="https://sculptures.live?random">RANDOM PAGE</a>
+  </p></body>
 
 </html>
